fix: wrap links

--- a/src/app/course/course-home/course-home.component.scss
+++ b/src/app/course/course-home/course-home.component.scss
@@ -86,6 +86,9 @@ h2 {
 .quick-access {
   display: flex;
   column-gap: 0.75rem;
+  row-gap: 0.75rem;
+  flex-wrap: wrap;
+
   margin-top: 0.75rem;
   margin-bottom: 1rem;
 
